--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.1",
     "@react-hook/window-scroll": "^1.3.0",
     "@rive-app/react-canvas": "^3.0.45",
