--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev",
     "build": "next build",
     "dev:build": "next build",
-    "postbuild": "node ./src/scripts/build-algolia-search.js && next-sitemap",
+    "postbuild": "node ./src/scripts/rss.js && next-sitemap",
     "start": "next start",
     "format": "prettier --write .",
     "lint": "npm run lint:js && npm run lint:md",
@@ -23,12 +23,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@docsearch/react": "^3.3.4",
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-slider": "^1.1.1",
     "@react-hook/window-scroll": "^1.3.0",
     "@rive-app/react-canvas": "^3.0.45",
     "@tailwindcss/typography": "github:tailwindcss/typography",
-    "algoliasearch": "^4.14.3",
     "chunk-text": "^2.0.1",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
@@ -56,7 +56,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
-    "react-instantsearch-dom": "^6.38.3",
     "react-intersection-observer": "^9.4.1",
     "react-paginate": "^8.1.4",
     "react-share": "^4.4.1",
@@ -66,7 +65,6 @@
     "remark-gfm": "^3.0.1",
     "rive-react": "^3.0.34",
     "rss": "^1.2.2",
-    "search-insights": "^2.2.3",
     "slugify": "^1.6.5",
     "tailwindcss-safe-area": "^0.2.2",
     "yup": "^0.32.11"
