refactor: make the chat work on a proper endpoint

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ WP_HTACCESS_PASSWORD=
 WP_GRAPHQL_URL=https://neon-hwp.dreamhosters.com/graphql
 WP_GRAPHQL_AUTH_TOKEN=
 WP_PREVIEW_SECRET=
+AI_DOCS_CHAT_API_URL=
 
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
