chore: ignore autobuilded files

--- a/.gitignore
+++ b/.gitignore
@@ -62,10 +62,9 @@ typings/
 .next/
 
 # ignore local sitemap
+public/sitemap.xml
 public/sitemap-0.xml
-
-sitemap.xml
-sitemap-0.xml
+public/robots.txt
 
 # Mac files
 .DS_Store
