--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ ALGOLIA_ADMIN_KEY=
 
 NEXT_PUBLIC_DOCS_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/docs/
 NEXT_PUBLIC_RELEASE_NOTES_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/release-notes/
+NEXT_PUBLIC_RELEASE_NOTES_API_URL=https://neon.tech/api/release-notes
