--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
-  "*.{js,jsx,html,css,md}": "prettier --write",
+  "*.{js,jsx,html,css}": "prettier --write",
   "*.{js,jsx}": "eslint --cache --fix",
+  "*.{md}": "markdownlint --fix --ignore-path .gitignore ."
 }
