--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,4 @@
 {
   "*.{js,jsx,html,css}": "prettier --write",
-  "*.{js,jsx}": "eslint --cache --fix",
-  "*.{md}": "markdownlint --fix --ignore-path .gitignore ."
+  "*.{js,jsx}": "eslint --cache --fix"
 }
