--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@docsearch/react": "^3.3.4",
+    "@docsearch/react": "^3.5.0",
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-slider": "^1.1.1",
     "@react-hook/window-scroll": "^1.3.0",
@@ -48,7 +48,7 @@
     "lodash.shuffle": "^4.2.0",
     "lottie-web": "^5.10.1",
     "markdownlint-cli": "^0.33.0",
-    "next": "^13.4.5",
+    "next": "13.4.4",
     "next-mdx-remote": "^4.2.1",
     "next-sitemap": "^3.1.45",
     "next-themes": "^0.2.1",
