--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lodash.shuffle": "^4.2.0",
     "lottie-web": "^5.10.1",
     "markdownlint-cli": "^0.33.0",
-    "next": "13.4.4",
+    "next": "^13.4.5",
     "next-mdx-remote": "^4.2.1",
     "next-sitemap": "^3.1.45",
     "next-themes": "^0.2.1",
