Rename the Free Tier topic file
Rename Free Tier topic file to remove "technical-preview". The Technical Preview applies generally, not just to the free tier.

--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -20,7 +20,7 @@
         - title: Overview
           slug: introduction/plans
         - title: Free
-          slug: introduction/technical-preview-free-tier
+          slug: introduction/free-tier
         - title: Pro
           slug: introduction/pro-plan
         - title: Custom
