--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -102,6 +102,7 @@
           slug: guides/elixir-ecto
         - title: Go
           slug: guides/go
+          ariaLabel: Connect a Go application to Neon
         - title: Java
           slug: guides/java
         - title: PHP
