--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@docsearch/react": "^3.5.0",
+    "@headlessui/react": "^1.7.15",
+    "@headlessui/tailwindcss": "^0.1.3",
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.1",
