add link to the sidebar

--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -167,6 +167,8 @@
               slug: guides/vercel
             - title: Connect manually
               slug: guides/vercel-manual
+    - title: OAuth
+      slug: guides/oauth-integration
 - title: Extensions
   items:
     - title: Supported extensions
