--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ AI_DOCS_CHAT_API_URL=
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX_NAME=
+NEXT_PUBLIC_ALGOLIA_BLOG_INDEX_NAME=
 
 NEXT_PUBLIC_DOCS_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/docs/
 NEXT_PUBLIC_RELEASE_NOTES_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/release-notes/
