--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -96,6 +96,10 @@
       slug: manage/operations
 - title: Guides
   items:
+    - title: Neon features
+      items: 
+        title: Manage database access with SQL
+        slug: guides/manage-database-access
     - title: Languages
       items:
         - title: Elixir
