--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -100,7 +100,7 @@
   items:
     - title: Neon features
       items: 
-        - title: Manage roles and database access with SQL
+        - title: Manage roles and databases with SQL
           slug: guides/manage-database-access
         - title: Read replicas
           slug: guides/read-replica-guide
