--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -181,7 +181,7 @@
   items:
     - title: Supported extensions
       slug: extensions/pg-extensions
-    - title: Neon utils
+    - title: neon_utils
       slug: extensions/neon-utils
     - title: pg_embedding
       slug: extensions/pg_embedding
