--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -143,6 +143,8 @@
                   slug: guides/prisma-migrate
     - title: Backend-as-a-service
       items:
+        - title: Exograph
+          slug: guides/exograph
         - title: Grafbase
           slug: guides/grafbase
         - title: Hasura
