--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -100,7 +100,7 @@
   items:
     - title: Neon features
       items: 
-        - title: Enabling Autoscaling
+        - title: Autoscaling
           slug: guides/autoscaling-guide
         - title: Manage roles and databases with SQL
           slug: guides/manage-database-access
