--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -177,6 +177,48 @@
               slug: guides/vercel-manual
     - title: OAuth
       slug: guides/oauth-integration
+- title: AI integration
+  items:
+    - title: Introduction
+      items:
+        - title: Vector embeddings
+          slug: ai/vector-embeddings
+        - title: Vector search
+          slug: ai/vector-search
+    - title: Vector search in PostgreSQL
+      items:
+        - title: Choosing a vector search extension
+          slug: ai/choosing-a-vector-search-extension
+        - title: Vector search with pg-embedding
+          slug: ai/vector-search-with-pg-embedding
+        - title: Vector search with pg-vector
+          slug: ai/vector-search-with-pg-vector
+        - title: Migrating from pg-vector to pg-embedding
+          slug: ai/migrating-from-pg-vector-to-pg-embedding
+    - title: Examples
+      items:
+        - title: Building a ChatGPT plugin
+          slug: ai/building-a-chatgpt-plugin
+        - title: Building an AI chatbot
+          slug: ai/building-an-ai-chatbot
+        - title: Building a Web-based AI SQL Playground
+          slug: ai/building-a-web-based-ai-sql-playground
+    - title: AI models
+      items:
+        - title: OpenAI
+          slug: ai/openai
+        - title: Llama 2
+          slug: ai/llama-2
+    - title: AI tools
+      items:
+        - title: LangChain
+          slug: ai/langchain
+        - title: Hugging Face
+          slug: ai/hugging-face
+        - title: Google Colab
+          slug: ai/google-colab
+        - title: LiamaIndex
+          slug: ai/liama-index
 - title: Extensions
   items:
     - title: Supported extensions
