--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -114,6 +114,8 @@
               slug: guides/branching-neon-api
             - title: Branching with GitHub Actions
               slug: guides/branching-github-actions
+        - title: Project sharing
+          slug: guides/project-sharing-guide
     - title: Languages
       items:
         - title: Elixir
