--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -197,9 +197,9 @@
   items:
     - title: Introduction
       slug: ai/ai-intro
-    - title: Vector search with pg_embedding
+    - title: pg_embedding
       slug: extensions/pg_embedding
-    - title: Vector search with pgvector
+    - title: pgvector
       slug: extensions/pgvector
 - title: Extensions
   items:
