--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-share": "^4.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.15.0",
+    "react-tweet": "^3.0.4",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
     "rive-react": "^3.0.34",
