--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -234,7 +234,13 @@
     - title: Import from a Neon project
       slug: import/import-from-neon
 - title: Security
-  slug: security/security-overview
+  items:
+    - title: Security overview
+      slug: security/security-overview
+    - title: Security reporting
+      slug: security/security-reporting
+    - title: Security reporting
+      slug: security/soc2-compliance
 - title: Reference
   items:
     - title: Neon CLI
