--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -239,7 +239,7 @@
       slug: security/security-overview
     - title: Security reporting
       slug: security/security-reporting
-    - title: Security reporting
+    - title: SOC2 compliance
       slug: security/soc2-compliance
 - title: Reference
   items:
